@@ -5,6 +5,7 @@
 * Pick up failure on after hook (#272 Aslak Hellesøy)
 
 === Bugfixes
+* Fixed incorrect colours in pretty formatter's table headers for outline tables (Aslak Hellesøy)
 * Exceptions from steps called within hooks are now reraised. (#294 Ben Mabey)
 
 == 0.3.0 2009-04-14
